[package]
name = "trajectory-calculator"
version = "0.1.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
noise = "0.7"
jemallocator = "0.3"
jemalloc-ctl = "0.3"
lazy_static = "1.4.0"
itertools = "0.10.0"
structopt = "0.3.21"